[gd_scene load_steps=27 format=3 uid="uid://cnotmvk44rcf0"]

[ext_resource type="Script" path="res://Scenes and scripts/global/global scripts/shambler.gd" id="1_7j14c"]
[ext_resource type="Texture2D" uid="uid://c42yt1euil6eg" path="res://assets/sprites/shambler_blink.png" id="1_iboa1"]
[ext_resource type="Texture2D" uid="uid://b2k2kwja52fkg" path="res://assets/Images/light.png" id="2_l5xai"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4304r"]
atlas = ExtResource("1_iboa1")
region = Rect2(0, 0, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_cemyg"]
atlas = ExtResource("1_iboa1")
region = Rect2(64, 0, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_352j1"]
atlas = ExtResource("1_iboa1")
region = Rect2(128, 0, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqcqf"]
atlas = ExtResource("1_iboa1")
region = Rect2(192, 0, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebnd2"]
atlas = ExtResource("1_iboa1")
region = Rect2(256, 0, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_opw4s"]
atlas = ExtResource("1_iboa1")
region = Rect2(320, 0, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic1d3"]
atlas = ExtResource("1_iboa1")
region = Rect2(384, 0, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwaj4"]
atlas = ExtResource("1_iboa1")
region = Rect2(384, 0, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_aab0w"]
atlas = ExtResource("1_iboa1")
region = Rect2(320, 0, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_3s0bg"]
atlas = ExtResource("1_iboa1")
region = Rect2(256, 0, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yb1o"]
atlas = ExtResource("1_iboa1")
region = Rect2(192, 0, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcf1i"]
atlas = ExtResource("1_iboa1")
region = Rect2(128, 0, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6xy8"]
atlas = ExtResource("1_iboa1")
region = Rect2(64, 0, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4jib"]
atlas = ExtResource("1_iboa1")
region = Rect2(0, 0, 64, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_ejnn1"]
animations = [{
"frames": [{
"duration": 4.0,
"texture": SubResource("AtlasTexture_4304r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cemyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_352j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqcqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebnd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opw4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic1d3")
}],
"loop": false,
"name": &"close_eye",
"speed": 10.0
}, {
"frames": [{
"duration": 4.0,
"texture": SubResource("AtlasTexture_mwaj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aab0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3s0bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yb1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcf1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6xy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4jib")
}],
"loop": false,
"name": &"open_eye",
"speed": 16.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_x4q3r"]
radius = 31.1448

[sub_resource type="CircleShape2D" id="CircleShape2D_jxta0"]
radius = 144.056

[sub_resource type="Animation" id="Animation_p2c2h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DetectArea:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DetectArea:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_57132"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DetectArea:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"close_eye"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DetectArea:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kj2c5"]
resource_name = "left_detect"

[sub_resource type="Animation" id="Animation_r48b4"]
resource_name = "right_detect"

[sub_resource type="Animation" id="Animation_umqc3"]
resource_name = "searching"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DetectArea:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.96667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DetectArea:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"open_eye"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hs1tx"]
_data = {
"RESET": SubResource("Animation_p2c2h"),
"idle": SubResource("Animation_57132"),
"left_detect": SubResource("Animation_kj2c5"),
"right_detect": SubResource("Animation_r48b4"),
"searching": SubResource("Animation_umqc3")
}

[node name="Shambler" type="CharacterBody2D"]
collision_layer = 32
script = ExtResource("1_7j14c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ejnn1")
animation = &"close_eye"
frame = 6
frame_progress = 1.0

[node name="MainCollider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x4q3r")

[node name="ActivateRadius" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 16

[node name="ActivateRadiusCollider" type="CollisionShape2D" parent="ActivateRadius"]
shape = SubResource("CircleShape2D_jxta0")
debug_color = Color(0.361728, 0.369971, 9.62615e-08, 0.156863)

[node name="DetectArea" type="Area2D" parent="."]
visible = false
collision_layer = 128
collision_mask = 16

[node name="DetectCollider" type="CollisionPolygon2D" parent="DetectArea"]
position = Vector2(5.99998, -3)
scale = Vector2(3.10232, 1)
polygon = PackedVector2Array(-123.456, -91, -123.456, 101, -1.61169, 36, -1.93403, -32)

[node name="PointLight2D" type="PointLight2D" parent="DetectArea"]
position = Vector2(5.99998, -3)
scale = Vector2(3.10232, 1)
color = Color(0.52549, 0.388235, 0.0666667, 0.839216)
energy = 3.0
range_z_min = -500
range_z_max = 500
texture = ExtResource("2_l5xai")
height = 50.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hs1tx")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="direction_timer" type="Timer" parent="."]
wait_time = 1.5

[node name="search_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="testTimer" type="Timer" parent="."]
autostart = true

[node name="attackTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="detect_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="ActivateRadius" to="." method="_on_activate_radius_body_entered"]
[connection signal="body_exited" from="ActivateRadius" to="." method="_on_activate_radius_body_exited"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_detect_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="direction_timer" to="." method="_on_direction_timer_timeout"]
[connection signal="timeout" from="search_timer" to="." method="_on_search_timer_timeout"]
[connection signal="timeout" from="testTimer" to="." method="_on_test_timer_timeout"]
[connection signal="timeout" from="attackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="detect_timer" to="." method="_on_detect_timer_timeout"]
